<resources>
    <string name="app_name">BackOnTrack</string>
    <string name="cnt_description_login_btn">botão de logar</string>
    <string name="hint_login_registration">Matrícula</string>
    <string name="hint_login_password">Senha</string>
    <string name="cnt_description_login_profile">icone de uma pessoa</string>
    <string name="cnt_description_login_password">icone de um cadeado</string>
    <string name="cnt_description_login_logo">back on track</string>
    <string name="login_app_name">i9move</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Exercise_TabLabel">Exercícios</string>
    <string name="Calendar_TabLabel">Calendário</string>
    <string name="LV1_Preferences_Key">1066</string>
    <string name="LV2_Preferences_Key">1758</string>
    <string name="LV3_Preferences_Key">1961</string>
    <string name="isFirstTime_Preferences_Key">1899</string>
    <string name="LV_STATUS_DOWNLOAD">DOWNLOAD</string>
    <string name="LV_STATUS_DISABLED">DISABLED</string>
    <string name="LV_STATUS_ENABLED">ENABLED</string>
    <string name="ShowcaseScreen_Description">Seu nível atual é destacado por um ícone colorido\n\nToque em um nível desbloqueado para iniciar os exercícios</string>
    <string name="ShowcaseScreen_Title">Essa é a tela de níveis</string>
    <string name="LEVEL_NUMBER">LV_NUMBER</string>
    <string name="exercise_videos_path">EXERCISE_VIDEOS_PATH</string>
    <string name="exercise_videos_rootPath">/exercisesVideos/level</string>
    <string name="feedback_title">Como você avalia seu esforço nesse exercício?</string>
    <string name="feedback_series_title">Quantas repetições você fez?</string>
    <string name="string_confirm">CONFIRMAR</string>
    <string name="login_success_msg">Login efetuado com sucesso!</string>
    <string name="ARGS_FEEDBACK_DIALOG_ID">ARGS_FEEDBACK_DIALOG_ID</string>
    <string name="ARGS_FEEDBACK_DIALOG_TIMER">ARGS_FEEDBACK_DIALOG_TIMER</string>
    <string name="EXERCISE_STATUS_1">COMPLETO</string>
    <string name="EXERCISE_STATUS_2">INCOMPLETO</string>
    <string name="TOKEN_EXPIRED">EXPIRED</string>
    <string name="ARGS_EXERCISE_START_DIALOG">1962</string>
    <string name="NULL_OBJECTS_MESSAGE">Sem necessidade de objetos.</string>
    <string name="PERMITION_REQUEST_SUCESS">Sucesso</string>
    <string name="PERMITION_REQUEST_ERRO1">Usuário não possui exercícios cadastrados</string>
    <string name="PERMITION_REQUEST_ERRO2">Sem conexão com a internet</string>
    <string name="EMPTY_QUEUE_INTENT">EMPTY_QUEUE_INTENT</string>
</resources>
